tests/ok/ffi-c-target-ilp32.ari
fn main() -> i64 {
  let count: size_t = 1u32;
  let offset: ptrdiff_t = -2i32;
  let wide: c_long = -3i32;
  let unsigned_wide: c_ulong = 4u32;
  return 0;
}
