tests/errors/string-backend.ari
fn main() -> i64 {
  let value: string = "ari";
  return 0;
}
